<resources>

    <string name="app_name">SleepyApp</string>
    <string name="login_username_hint">Nombre de usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_login_button">Ingresar</string>
    <string name="login_username_error">Nombre de usuario requerido</string>
    <string name="login_password_error">Contraseña requerida</string>
    <string name="login_loading_text">Cargando...</string>
    <string name="register_username_hint">Nombre de usuario</string>
    <string name="register_password_hint">Contraseña</string>
    <string name="register_password_again_hint">Repita la contraseña</string>
    <string name="register_register_button">Registrarse</string>
    <string name="register_cancel_button">Cancelar</string>
    <string name="register_username_error">Nombre de usuario incorrecto</string>
    <string name="register_password_error">Contraseña incorrecta</string>
    <string name="register_password_again_error">Las contraseñas no coinciden</string>
    <string name="register_gender_switch">Sexo</string>
    <string name="register_male_switch">Masculino</string>
    <string name="register_female_switch">Femenino</string>
    <string name="login_ask_account_button">¿No tienes cuenta?</string>
    <string name="login_invite_register_button">Registrate ahora</string>
    <string name="button_main_sleep">Dormir</string>
    <string name="button_main_awake">Despertar</string>
    <string name="text_friends_title">Mis amigos</string>
    <string name="main_you_sleep">Ha dormido:</string>
    <string name="title_activity_search_friend">Sign in</string>
    <string name="search_search_hint">Buscar amigos</string>
    <string name="search_button">Buscar</string>
    <string name="main_text_message">¿Qué estas pensando?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
